phonebook_ui/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: phonebook-ui-service
spec:
  type: NodePort
  selector:
    app: phonebook-ui
  ports:
    - port: 80
      targetPort: 80
