phonebook_ui/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phonebook-ui-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  rules:
    - host: sre-phonebook.online 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phonebook-ui-service
                port:
                  number: 80
